# openmaple

./: .gitignore  CONTRIBUTING.md  Expression.py  LICENSE.txt  README.md  Session.py  __init__.py  exportto.py  importfrom.py  maplec_ctypes.py  pyproject.toml
namespace/: __init__.py
