[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "OpenMaple"
version = "1.0"
authors = [
    { name = "Stephen Forrest", email = "sforrest@maplesoft.com" },
]
maintainer = [
    { name = "Stephen Forrest", email = "sforrest@maplesoft.com" },
]
description = "Python API for the Maple computer algebra system"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
license = { file = "LICENSE.txt" }

[project.urls]
Homepage = "https://github.com/Maplesoft/openmaple"
Issues = "https://github.com/Maplesoft/openmaple/issues"

dependencies = [
    "numpy >= 1.23",
]
